@@ -16,17 +16,21 @@ import com.moedaestudantil.api.entities.Professor;
 import com.moedaestudantil.api.entities.Transacao;
 
 import com.moedaestudantil.api.enums.TipoTransacao;
+import com.moedaestudantil.api.enums.TipoUsuario;
 
 import com.moedaestudantil.api.repositories.AlunoRepository;
 import com.moedaestudantil.api.repositories.ProfessorRepository;
 import com.moedaestudantil.api.repositories.TransacaoRepository;
+import com.moedaestudantil.api.util.TokenUtil;
 
 import lombok.RequiredArgsConstructor;
 
+import org.springframework.context.ApplicationEventPublisher;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
-import java.util.Base64;
 import java.util.List;
 
 @Service
@@ -34,257 +38,107 @@ import java.util.List;
 public class ProfessorService {
 
     private final ProfessorRepository professorRepository;
-
     private final AlunoRepository alunoRepository;
-
     private final TransacaoRepository transacaoRepository;
+    private final ApplicationEventPublisher eventPublisher;
+    private final PasswordEncoder passwordEncoder;
 
-    private final EmailProducerService emailProducerService;
-
-    public ProfessorResponseDTO toResponseDTO(
-            Professor professor
-    ) {
-
-        ProfessorResponseDTO dto =
-                new ProfessorResponseDTO();
-
+    public ProfessorResponseDTO toResponseDTO(Professor professor) {
+        ProfessorResponseDTO dto = new ProfessorResponseDTO();
         dto.setId(professor.getId());
-
         dto.setNome(professor.getNome());
-
         dto.setEmail(professor.getEmail());
-
         dto.setCpf(professor.getCpf());
-
-        dto.setDepartamento(
-                professor.getDepartamento()
-        );
-
+        dto.setDepartamento(professor.getDepartamento());
         dto.setInstituicaoNome(
-                professor.getInstituicao() != null
-                        ? professor.getInstituicao().getNome()
-                        : null
+                professor.getInstituicao() != null ? professor.getInstituicao().getNome() : null
         );
-
-        dto.setSaldoMoedas(
-                professor.getSaldoMoedas()
-        );
-
+        dto.setSaldoMoedas(professor.getSaldoMoedas());
         return dto;
     }
 
-    public ProfessorLoginResponseDTO login(
-            ProfessorLoginDTO dto
-    ) {
+    public ProfessorLoginResponseDTO login(ProfessorLoginDTO dto) {
+        Professor professor = professorRepository.findByEmail(dto.getEmail())
+                .orElseThrow(() -> new RuntimeException("Email ou senha inválidos!"));
 
-        Professor professor =
-                professorRepository
-                        .findByEmail(dto.getEmail())
-                        .orElseThrow(() ->
-                                new RuntimeException(
-                                        "Email ou senha inválidos!"
-                                )
-                        );
-
-        String senhaCodificada =
-                Base64.getEncoder()
-                        .encodeToString(
-                                dto.getSenha().getBytes()
-                        );
-
-        if (!professor.getSenha()
-                .equals(senhaCodificada)) {
-
-            throw new RuntimeException(
-                    "Email ou senha inválidos!"
-            );
+        if (!passwordEncoder.matches(dto.getSenha(), professor.getSenha())) {
+            throw new RuntimeException("Email ou senha inválidos!");
         }
 
-        String token =
-                Base64.getEncoder()
-                        .encodeToString(
-                                (
-                                        professor.getEmail()
-                                                + ":"
-                                                + System.currentTimeMillis()
-                                ).getBytes()
-                        );
-
-        return new ProfessorLoginResponseDTO(
-                token,
-                toResponseDTO(professor)
-        );
+        String token = TokenUtil.generate(professor.getEmail(), TipoUsuario.PROFESSOR);
+        return new ProfessorLoginResponseDTO(token, toResponseDTO(professor));
     }
 
-    public Professor findByEmail(
-            String email
-    ) {
-
-        return professorRepository
-                .findByEmail(email)
-                .orElseThrow(() ->
-                        new RuntimeException(
-                                "Professor não encontrado"
-                        )
-                );
+    public Professor findByEmail(String email) {
+        return professorRepository.findByEmail(email)
+                .orElseThrow(() -> new RuntimeException("Professor não encontrado"));
     }
 
     // =====================================================
     // ENVIAR MOEDAS
     // =====================================================
 
-    public EnvioMoedasResponseDTO enviarMoedas(
-            Long professorId,
-            EnviarMoedasDTO dto
-    ) {
+    @Transactional
+    public EnvioMoedasResponseDTO enviarMoedas(Long professorId, EnviarMoedasDTO dto) {
 
-        Professor professor =
-                professorRepository.findById(
-                        professorId
-                ).orElseThrow(() ->
-                        new RuntimeException(
-                                "Professor não encontrado"
-                        )
-                );
+        Professor professor = professorRepository.findById(professorId)
+                .orElseThrow(() -> new RuntimeException("Professor não encontrado"));
 
-        Aluno aluno =
-                alunoRepository.findById(
-                        dto.getAlunoId()
-                ).orElseThrow(() ->
-                        new RuntimeException(
-                                "Aluno não encontrado"
-                        )
-                );
+        Aluno aluno = alunoRepository.findById(dto.getAlunoId())
+                .orElseThrow(() -> new RuntimeException("Aluno não encontrado"));
 
-        // validar valor
-
-        if (dto.getValor() == null
-                || dto.getValor() <= 0) {
-
-            throw new RuntimeException(
-                    "Valor deve ser maior que zero"
-            );
+        if (dto.getValor() == null || dto.getValor() <= 0) {
+            throw new IllegalArgumentException("Valor deve ser maior que zero");
         }
 
-        // validar saldo
-
-        if (professor.getSaldoMoedas()
-                < dto.getValor()) {
-
-            throw new RuntimeException(
-                    "Saldo insuficiente"
-            );
+        if (professor.getSaldoMoedas() < dto.getValor()) {
+            throw new IllegalStateException("Saldo insuficiente");
         }
 
-        // validar mensagem
-
-        if (dto.getMensagem() == null
-                || dto.getMensagem().isBlank()) {
-
-            throw new RuntimeException(
-                    "Mensagem de reconhecimento é obrigatória"
-            );
+        if (dto.getMensagem() == null || dto.getMensagem().isBlank()) {
+            throw new IllegalArgumentException("Mensagem de reconhecimento é obrigatória");
         }
 
-        // atualizar saldos
+        professor.setSaldoMoedas(professor.getSaldoMoedas() - dto.getValor());
+        aluno.setSaldoMoedas(aluno.getSaldoMoedas() + dto.getValor());
 
-        professor.setSaldoMoedas(
-                professor.getSaldoMoedas()
-                        - dto.getValor()
-        );
-
-        aluno.setSaldoMoedas(
-                aluno.getSaldoMoedas()
-                        + dto.getValor()
-        );
-
-        // transação
-
-        Transacao transacao =
-                new Transacao();
-
+        Transacao transacao = new Transacao();
         transacao.setProfessor(professor);
-
         transacao.setAluno(aluno);
-
         transacao.setValor(dto.getValor());
-
-        transacao.setTipo(
-                TipoTransacao.ENVIO
-        );
-
-        transacao.setMensagem(
-                dto.getMensagem()
-        );
-
-        transacao.setData(
-                LocalDateTime.now()
-        );
+        transacao.setTipo(TipoTransacao.ENVIO);
+        transacao.setMensagem(dto.getMensagem());
+        transacao.setData(LocalDateTime.now());
 
         professorRepository.save(professor);
-
         alunoRepository.save(aluno);
+        Transacao salva = transacaoRepository.save(transacao);
 
-        Transacao salva =
-                transacaoRepository.save(
-                        transacao
-                );
+        // Publicar eventos: serão entregues ao Rabbit APÓS o commit
+        // (via EmailEventListener com @TransactionalEventListener AFTER_COMMIT)
+        eventPublisher.publishEvent(new EmailRecebimentoMoedaEvent(
+                aluno.getNome(),
+                aluno.getEmail(),
+                professor.getNome(),
+                dto.getValor(),
+                dto.getMensagem()
+        ));
 
-        // =====================================================
-        // PUBLICAR EVENTOS
-        // =====================================================
-
-        EmailRecebimentoMoedaEvent recebimentoEvent =
-                new EmailRecebimentoMoedaEvent(
-
-                        aluno.getNome(),
-
-                        aluno.getEmail(),
-
-                        professor.getNome(),
-
-                        dto.getValor(),
-
-                        dto.getMensagem()
-                );
-
-        emailProducerService.publicarRecebimento(
-                recebimentoEvent
-        );
-
-        EmailEnvioMoedaEvent envioEvent =
-                new EmailEnvioMoedaEvent(
-
-                        professor.getNome(),
-
-                        professor.getEmail(),
-
-                        aluno.getNome(),
-
-                        dto.getValor(),
-
-                        dto.getMensagem(),
-
-                        professor.getSaldoMoedas()
-                );
-
-        emailProducerService.publicarEnvio(
-                envioEvent
-        );
+        eventPublisher.publishEvent(new EmailEnvioMoedaEvent(
+                professor.getNome(),
+                professor.getEmail(),
+                aluno.getNome(),
+                dto.getValor(),
+                dto.getMensagem(),
+                professor.getSaldoMoedas()
+        ));
 
         return new EnvioMoedasResponseDTO(
-
                 salva.getId(),
-
                 aluno.getNome(),
-
                 salva.getValor(),
-
                 professor.getSaldoMoedas(),
-
-                salva.getData() != null
-                        ? salva.getData().toString()
-                        : null
+                salva.getData() != null ? salva.getData().toString() : null
         );
     }
 
@@ -292,144 +146,56 @@ public class ProfessorService {
     // EXTRATO
     // =====================================================
 
-    public List<TransacaoResponseDTO> extrato(
-            Long professorId
-    ) {
-
-        return transacaoRepository
-                .findByProfessorId(professorId)
-                .stream()
+    public List<TransacaoResponseDTO> extrato(Long professorId) {
+        return transacaoRepository.findByProfessorId(professorId).stream()
                 .map(this::toTransacaoDTO)
-                .collect(
-                        java.util.stream.Collectors.toList()
-                );
+                .toList();
     }
 
-    private TransacaoResponseDTO toTransacaoDTO(
-            Transacao t
-    ) {
-
-        TransacaoResponseDTO dto =
-                new TransacaoResponseDTO();
-
+    private TransacaoResponseDTO toTransacaoDTO(Transacao t) {
+        TransacaoResponseDTO dto = new TransacaoResponseDTO();
         dto.setId(t.getId());
-
         dto.setData(t.getData());
-
         dto.setTipo(t.getTipo());
-
         dto.setValor(t.getValor());
-
         dto.setMensagem(t.getMensagem());
-
-        dto.setAlunoNome(
-                t.getAluno() != null
-                        ? t.getAluno().getNome()
-                        : null
-        );
-
-        dto.setProfessorNome(
-                t.getProfessor() != null
-                        ? t.getProfessor().getNome()
-                        : null
-        );
-
-        dto.setCodigoCupom(
-                t.getCodigoCupom()
-        );
-
-        dto.setStatus(
-                t.getStatus()
-        );
-
+        dto.setAlunoNome(t.getAluno() != null ? t.getAluno().getNome() : null);
+        dto.setProfessorNome(t.getProfessor() != null ? t.getProfessor().getNome() : null);
+        dto.setCodigoCupom(t.getCodigoCupom());
+        dto.setStatus(t.getStatus());
         return dto;
     }
 
-    public Double saldo(
-            Long professorId
-    ) {
-
-        Professor professor =
-                professorRepository.findById(
-                        professorId
-                ).orElseThrow(() ->
-                        new RuntimeException(
-                                "Professor não encontrado"
-                        )
-                );
-
+    public Double saldo(Long professorId) {
+        Professor professor = professorRepository.findById(professorId)
+                .orElseThrow(() -> new RuntimeException("Professor não encontrado"));
         return professor.getSaldoMoedas();
     }
 
-    public List<AlunoResponseDTO>
-    listarAlunosPorInstituicao(
-            Long professorId
-    ) {
-
-        Professor professor =
-                professorRepository.findById(
-                        professorId
-                ).orElseThrow(() ->
-                        new RuntimeException(
-                                "Professor não encontrado"
-                        )
-                );
-
-        return alunoRepository
-                .findByInstituicaoId(
-                        professor.getInstituicao().getId()
-                )
-                .stream()
+    public List<AlunoResponseDTO> listarAlunosPorInstituicao(Long professorId) {
+        Professor professor = professorRepository.findById(professorId)
+                .orElseThrow(() -> new RuntimeException("Professor não encontrado"));
+        return alunoRepository.findByInstituicaoId(professor.getInstituicao().getId()).stream()
                 .map(this::toAlunoDTO)
                 .toList();
     }
 
-    public List<AlunoResponseDTO>
-    buscarAlunosPorNome(
-            Long professorId,
-            String nome
-    ) {
-
-        Professor professor =
-                professorRepository.findById(
-                        professorId
-                ).orElseThrow(() ->
-                        new RuntimeException(
-                                "Professor não encontrado"
-                        )
-                );
-
+    public List<AlunoResponseDTO> buscarAlunosPorNome(Long professorId, String nome) {
+        Professor professor = professorRepository.findById(professorId)
+                .orElseThrow(() -> new RuntimeException("Professor não encontrado"));
         return alunoRepository
-                .findByInstituicaoIdAndNomeContainingIgnoreCase(
-                        professor.getInstituicao().getId(),
-                        nome
-                )
-                .stream()
+                .findByInstituicaoIdAndNomeContainingIgnoreCase(professor.getInstituicao().getId(), nome).stream()
                 .map(this::toAlunoDTO)
                 .toList();
     }
 
-    private AlunoResponseDTO toAlunoDTO(
-            Aluno a
-    ) {
-
-        AlunoResponseDTO dto =
-                new AlunoResponseDTO();
-
+    private AlunoResponseDTO toAlunoDTO(Aluno a) {
+        AlunoResponseDTO dto = new AlunoResponseDTO();
         dto.setId(a.getId());
-
         dto.setNome(a.getNome());
-
         dto.setEmail(a.getEmail());
-
         dto.setCurso(a.getCurso());
-
-        dto.setInstituicaoNome(
-                a.getInstituicao() != null
-                        ? a.getInstituicao().getNome()
-                        : null
-        );
-
+        dto.setInstituicaoNome(a.getInstituicao() != null ? a.getInstituicao().getNome() : null);
         return dto;
     }
 }
